# sdd-workshop

./: .gitignore  issues.md  pyproject.toml
.github/: copilot-instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
cli/: __init__.py  main.py  output.py
specs/001-cli-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cli-todo-app/checklists/: requirements.md
specs/001-cli-todo-app/contracts/: cli-contract.md
specs/002-todo-tags/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-tags/checklists/: requirements.md
specs/002-todo-tags/contracts/: cli-contract.md
tests/: conftest.py
tests/integration/: __init__.py  test_cli_add.py  test_cli_delete.py  test_cli_done.py  test_cli_list.py  test_cli_performance.py  test_cli_persistence.py  test_cli_system_errors.py  test_cli_validation_matrix.py
tests/unit/: test_service_add.py  test_service_delete.py  test_service_done.py  test_service_list.py
todo_lib/: __init__.py  db.py  errors.py  models.py  repository.py  service.py  validators.py
